--- a/templates/base.html
+++ b/templates/base.html
@@ -97,12 +97,15 @@
 
 					<div class="right-top-bar flex-w h-full">
 						 {% if user.is_authenticated %}
-						<a href="#" class="flex-c-m trans-04 p-lr-25">
+						<a href="#" class="flex-c-m trans-04 p-lr-25" style="border-left: none">
 							Hii {{user.first_name}}
 						</a>
 
 						<a href="/profile" class="flex-c-m trans-04 p-lr-25">
 							My Account
+						</a>
+						<a href="/residents" class="flex-c-m trans-04 p-lr-25">
+							Social
 						</a>
 
 						<a href="{% url 'password_change' %}"class="flex-c-m trans-04 p-lr-25">
@@ -230,6 +233,9 @@
 
 						<a href="/profile" class="flex-c-m p-lr-10 trans-04">
 							My Account
+						</a>
+						<a href="/residents" class="flex-c-m trans-04 p-lr-25">
+							Social
 						</a>
 
 						<a href="{% url 'password_change' %}" class="flex-c-m p-lr-10 trans-04">
