--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,8 @@
   box-shadow: 0 8px 16px 0 #8080ff;
 }
 
+
+
 	</style>
 <body class="animsition">
 	
@@ -130,7 +132,7 @@
 					
 						
 					<a href="#" class="logo">
-						<img src="{% static 'images/logo.png' %}" alt="IMG-LOGO">
+						<img src="{% static 'images/logo.jpg' %}" alt="IMG-LOGO">
 					</a>
 
 					
@@ -173,7 +175,7 @@
 						</div>
 						
 						<a href="/show" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 " >
-							 <img src="{% static 'images/service.png' %}" alt="service" style="width:22px;height:26px;float:right; ">
+							 <img src="{% static 'images/service.png' %}" alt="service" style="width:22px;height:26px;float:right; " >
 						</a>
 
 					</div>
@@ -185,7 +187,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="{% static 'images/logo.png' %}" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="{% static 'images/logo.jpg' %}" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
