--- a/templates/residents.html
+++ b/templates/residents.html
@@ -18,7 +18,7 @@
   
     </small>
     {% for y in info %}
-    <div class="card p-3 m-t-15">
+    <div class="card p-3 m-t-15" style="background-color: lightgray">
 
 	<li class="btn">
     
