--- a/signin/static/css/main.css
+++ b/signin/static/css/main.css
@@ -2541,7 +2541,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .size-125 {
-  min-width: 180px;
+  min-width: 100%;
   height: 40px;
 }
 
