--- a/templates/display.html
+++ b/templates/display.html
@@ -23,7 +23,7 @@
 </div>
 <div class="container-fluid" style="padding-left: 15%;padding-right: 15%;">
 <div class="card p-3">
-<table class="table table-bordered table-striped table-hover" style="border-width: 10px">
+<table class="table table-bordered table-striped table-hover table-responsive" style="border-width: 10px">
 
 	<div class="row pl" >
 		
