--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
 				<nav class="limiter-menu-desktop container">
 					
 						
-					<a href="#" class="logo">
+					<a  class="logo">
 						<img src="{% static 'images/logo.png' %}" alt="IMG-LOGO">
 					</a>
 
@@ -187,7 +187,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="{% static 'images/logo.png' %}" alt="IMG-LOGO"></a>
+				<a><img src="{% static 'images/logo.png' %}" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
