added admin login

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -135,7 +135,7 @@ function hasScrolled() {
               <li class="nav-item" style="display: inline-block;color:black">
                 <a class="nav-link "  href="/index" style="color:#6666ff;">Home</a>
               </li>
-              {% if user.is_authenticated %}
+             <!--  {% if user.is_authenticated %}
               <li class="nav-item" style="display: inline-block;color:black">
                 <a class="nav-link"  href="/profile"  >Me</a>
               </li>
@@ -149,7 +149,7 @@ function hasScrolled() {
               <li class="nav-item" style="display: inline-block;color:black">
                 <a class="nav-link"  href="/accounts/logout" style="color:red" >Logout</a>
               </li>   
-               {% endif %}           
+               {% endif %}            -->
           </ul>
 
           
