--- a/templates/Ask_form.html
+++ b/templates/Ask_form.html
@@ -24,6 +24,7 @@
                  {% csrf_token %}
                  <div class="form-group"  style="  visibility: hidden;">
                   {% render_field form.aut  type="text" class="form-control" placeholder="Title"%}
+                  {% render_field form.flat_number  type="text" class="form-control" placeholder="flat"%}
               </div>
                 <div class="form-group"  >
              <input type="text" name="time" class="form-control" placeholder="Preferred time ">
