added admin login

--- a/templates/received_orders2.html
+++ b/templates/received_orders2.html
@@ -32,6 +32,11 @@
 				
 					
 					<tr>
+						<td style="color:black">TIME:</td> 
+						<td> 
+								{{ x.time }}
+							 </td>		
+						
 						<td style="color:black">SERVICE REQUESTED :</td> 
 						
        					  <td> 
