--- a/templates/received_orders2.html
+++ b/templates/received_orders2.html
@@ -19,7 +19,7 @@
     <!-- <hr>
     <h3><a class="btn btn-primary  pl " href="/req" style="float:left">BACK</a></h3> -->
 </div>
-<div class="container-fluid" style="padding-left: 15%;padding-right: 15%;">
+<div class="container-fluid" style="padding-left: 7%;padding-right: 7%;">
 <div class="card p-3">
 <table class="table table-bordered table-striped table-hover table-responsive" style="border-width: 10px">
 
@@ -34,8 +34,11 @@
 					<tr>
 						<td style="color:black">TIME:</td> 
 						<td> 
+								{{ x.created }}
+							 </td>
+							 <td> 
 								{{ x.time }}
-							 </td>		
+							 </td>				
 						
 						<td style="color:black">SERVICE REQUESTED :</td> 
 						
@@ -54,23 +57,6 @@
 	
 
 	</div>
-<!-- 	<div class="pagination p-t-30"  style=" left: 0; bottom: 5%; width: 100%;z-index:3;">
-				<ul style="margin-left: 45%">
-		
-			
-			{% if object_list.has_previous %}
-			<li style="display:inline-flex"><a href="?page={{ object_list.previous_page_number }}" style="color:#1a75ff"><strong><<</strong> &nbsp &nbsp</a></li>
-			{% endif %}
-			{% for pg in object_list.paginator.page_range %}
-			{% if object_list.number == pg %}
-	<a href="?page={{ pg }}" style="color:#1a75ff">{{ pg }}</a>
-		
-			{% endif %}
-			{% endfor %}
-			{% if object_list.has_next %}
-			<li style="display:inline-flex"><a href="?page={{ object_list.next_page_number }}" style="color:#1a75ff"><strong>&nbsp &nbsp >></strong>   </a></li>
-			{% endif %}
-		</ul>
-</div> -->
 
+    
 	{% endblock %}
