--- a/templates/received_orders2.html
+++ b/templates/received_orders2.html
@@ -32,12 +32,12 @@
 				
 					
 					<tr>
-						<td style="color:black">TIME:</td> 
+						
 						<td> 
-								{{ x.created }}
+								<b>DATE : </b>{{ x.created }}
 							 </td>
 							 <td> 
-								{{ x.time }}
+								<b>TIME : </b>{{ x.time }}
 							 </td>				
 						
 						<td style="color:black">SERVICE REQUESTED :</td> 
