changed table templ

--- a/templates/display.html
+++ b/templates/display.html
@@ -35,6 +35,7 @@
 					{% if x.bread or x.water or x.milk or x.rice %}
 
 					<tr>
+					<td><b>TIME : </b>{{ x.created }}</td> 
 					<td style="color:black">ORDERED ITEMS :</td>
 					{% if x.get_total %}
 				<td style="color:green"> <b>Total :</b> ₹ {{ x.get_total }}</td>
