--- a/templates/show.html
+++ b/templates/show.html
@@ -19,7 +19,7 @@
     <!-- <hr>
     <h3><a class="btn btn-primary  pl " href="/req" style="float:left">BACK</a></h3> -->
 </div>
-<div class="container-fluid" style="padding-left: 5%;padding-right: 5%;">
+<div class="container-fluid" style="padding-left: 10%;padding-right: 10%;">
 <div class="card p-3">
 <table class="table table-bordered table-striped table-hover table-responsive" style="border-width: 10px">
 
@@ -32,6 +32,12 @@
 				{% if  user.username == x.aut %}
 					
 					<tr>
+								<td> 
+								<b>DATE : </b>{{ x.created }}
+							 </td>
+							 <td> 
+								<b>TIME : </b>{{ x.time }}
+							 </td>		
 						<td style="color:black">SERVICE REQUESTED :</td> 
 						
        					  <td> 
