--- a/templates/received_orders.html
+++ b/templates/received_orders.html
@@ -33,7 +33,7 @@
 					{% if x.bread or x.water or x.milk or x.rice %}
 
 					<tr>
-						<td><b>TIME : </b>{{ x.created }}</td> 
+						<td><b>DATE : </b>{{ x.created }}</td> 
 						
 					<td style="color:black">ORDERS :</td>
 					{% if x.get_total %}
