--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Cormorant&display=swap" rel="stylesheet"> 
 	<link  href='https://fonts.googleapis.com/css?family=Kaushan Script' rel='stylesheet'>
 	
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+	
 <!--===============================================================================================-->
 <script src="js/main.js"></script>
 <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
