--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,13 @@
 
 {% load widget_tweaks %}
 
-<!DOCTYPE html>
-<html lang="en">
 
+<head>
 	<title>home</title>
 	<meta charset="UTF-8">
-
-	<div class="sec-banner bg0 p-t-130 p-b-50 ">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+</head>
+	<div class="sec-banner bg0 p-t-130 p-b-05 ">
 		
 		<div class="container">
 			<div class="row">
@@ -87,21 +87,22 @@
             <div class="columns">
                 <div class="column is-offset-4 is-4">
                     
-                    <div class="box">
+                    <div class="box  ">
                         <article class="media">
                             <div class="media-left">
                                 <figure class="image is-50x50">
                                     <img src="http://openweathermap.org/img/w/{{ city_weather.icon }}.png" alt="Image">
                                 </figure>
                             </div>
-                            <div class="media-content">
+                            <div class="media-content ">
                                <!--  <div class="content"> -->
                                     <p>
                                         <span class="title"  style="font-family: Kaushan Script;color:  #9999ff;">{{ city_weather.city }}</span>
                                         <br><br>
                                         <span class="subtitle" >{{ city_weather.temperature }}° F</span>
                                         <br > {{ city_weather.description }}
-                                        <br> {{ city_weather.wind }} Wind speed
+                                        <br>Wind - {{ city_weather.wind }}mph 
+
                                     </p>
                                 <!-- </div> -->
                             </div>
